--- a/about/index.html
+++ b/about/index.html
@@ -67,7 +67,15 @@
 <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&amp;family=Noto&#43;Sans&#43;SC:wght@400;500;700&amp;display=swap" as="style" onload="this.onload=null;this.rel='stylesheet';" crossorigin>
-<script defer src="" crossorigin="anonymous" onload="Waline.pageviewCount({serverURL: ''});"></script>
+<script>
+    window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', ({ matches }) => {
+        if (matches) {
+            document.body.classList.add('dark');
+        } else {
+            document.body.classList.remove('dark');
+        }
+    })
+</script>
 <meta property="og:title" content="关于" />
 <meta property="og:description" content="杨可的博客，分享我的想法和观点。 Kiyan&rsquo;s Blog, Share my thoughts and opinions." />
 <meta property="og:type" content="article" />
@@ -133,11 +141,7 @@
 
 <body class="" id="top">
 <script>
-    if (localStorage.getItem("pref-theme") === "dark") {
-        document.body.classList.add('dark');
-    } else if (localStorage.getItem("pref-theme") === "light") {
-        document.body.classList.remove('dark')
-    } else if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
+    if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
         document.body.classList.add('dark');
     }
 
@@ -148,26 +152,6 @@
         <div class="logo">
             <a href="https://kiyanyang.github.io/" accesskey="h" title="Kiyan&#39;s Blog (Alt + H)">Kiyan&#39;s Blog</a>
             <div class="logo-switches">
-                <button id="theme-toggle" accesskey="t" title="(Alt + T)">
-                    <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
-                        fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                        stroke-linejoin="round">
-                        <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
-                    </svg>
-                    <svg id="sun" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
-                        fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                        stroke-linejoin="round">
-                        <circle cx="12" cy="12" r="5"></circle>
-                        <line x1="12" y1="1" x2="12" y2="3"></line>
-                        <line x1="12" y1="21" x2="12" y2="23"></line>
-                        <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line>
-                        <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line>
-                        <line x1="1" y1="12" x2="3" y2="12"></line>
-                        <line x1="21" y1="12" x2="23" y2="12"></line>
-                        <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line>
-                        <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
-                    </svg>
-                </button>
             </div>
         </div>
         <ul id="menu">
@@ -317,43 +301,21 @@
 
   </footer>
 <footer id="comment">
-    <script>
-    function getGiscusTheme() {
-        return document.body.classList.contains("dark") ? "dark" : "light";
-    }
-
-    function setGiscusTheme() {
-        const iframe = document.querySelector('iframe.giscus-frame');
-        if (!iframe) return;
-        iframe.contentWindow.postMessage({ giscus: { setConfig: { theme: getGiscusTheme() } } }, 'https://giscus.app');
-    }
-
-    const observer = new MutationObserver(_ => setGiscusTheme());
-    observer.observe(document.body, { attributes: true, attributeFilter: ["class"] });
-
-    document.addEventListener("DOMContentLoaded", () => {
-        const giscusAttributes = {
-            "src": "https://giscus.app/client.js",
-            "data-repo": "KiyanYang/KiyanYang.github.io",
-            "data-repo-id": "MDEwOlJlcG9zaXRvcnkzODQ2NDE5MTA=",
-            "data-category": "Giscus",
-            "data-category-id": "DIC_kwDOFu0rds4CUox8",
-            "data-mapping": "pathname",
-            "data-strict": "1",
-            "data-reactions-enabled": "1",
-            "data-emit-metadata": "0",
-            "data-input-position": "bottom",
-            "data-theme": getGiscusTheme(),
-            "data-lang": "en",
-            "data-loading": "lazy",
-            "crossorigin": "anonymous",
-            "async": "",
-        };
-
-        const giscusScript = document.createElement("script");
-        Object.entries(giscusAttributes).forEach(([key, value]) => giscusScript.setAttribute(key, value));
-        document.getElementById("comment").appendChild(giscusScript);
-    });
+    <script src="https://giscus.app/client.js"
+        data-repo="KiyanYang/KiyanYang.github.io"
+        data-repo-id="MDEwOlJlcG9zaXRvcnkzODQ2NDE5MTA="
+        data-category="Giscus"
+        data-category-id="DIC_kwDOFu0rds4CUox8"
+        data-mapping="pathname"
+        data-strict="1"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="preferred_color_scheme"
+        data-lang="en"
+        data-loading="lazy"
+        crossorigin="anonymous"
+        async>
 </script>
 
     <a href="#comment" aria-label="go to comment" title="Go to Comment (Alt + B)" class="top-link comment-link" id="comment-link" accesskey="b">
@@ -435,18 +397,6 @@
             mybutton.style.opacity = "0";
         }
     };
-
-</script>
-<script>
-    document.getElementById("theme-toggle").addEventListener("click", () => {
-        if (document.body.className.includes("dark")) {
-            document.body.classList.remove('dark');
-            localStorage.setItem("pref-theme", 'light');
-        } else {
-            document.body.classList.add('dark');
-            localStorage.setItem("pref-theme", 'dark');
-        }
-    })
 
 </script>
 <script>
