--- a/extras/index.html
+++ b/extras/index.html
@@ -19,6 +19,7 @@
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
 <link rel="alternate" type="application/rss+xml" href="https://kiyanyang.github.io/extras/index.xml">
+<link rel="alternate" hreflang="zh" href="https://kiyanyang.github.io/extras/">
 <noscript>
     <style>
         #theme-toggle,
@@ -77,6 +78,9 @@
         }
     })
 </script>
+
+  
+
 <meta property="og:title" content="更多" />
 <meta property="og:description" content="杨可的个人博客。" />
 <meta property="og:type" content="website" />
@@ -118,6 +122,8 @@
         <div class="logo">
             <a href="https://kiyanyang.github.io/" accesskey="h" title="Kiyan&#39;s Blog (Alt + H)">Kiyan&#39;s Blog</a>
             <div class="logo-switches">
+                <ul class="lang-switch"><li>|</li>
+                </ul>
             </div>
         </div>
         <ul id="menu">
@@ -246,7 +252,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2023 <a href="https://kiyanyang.github.io/">Kiyan&#39;s Blog</a></span>
+    <span>&copy; 2024 <a href="https://kiyanyang.github.io/">Kiyan&#39;s Blog</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
