--- a/extras/short-url/index.html
+++ b/extras/short-url/index.html
@@ -18,6 +18,7 @@
 <link rel="mask-icon" href="https://kiyanyang.github.io/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
+<link rel="alternate" hreflang="zh" href="https://kiyanyang.github.io/extras/short-url/">
 <noscript>
     <style>
         #theme-toggle,
@@ -76,6 +77,9 @@
         }
     })
 </script>
+
+  
+
 <meta property="og:title" content="短链接工具" />
 <meta property="og:description" content="短链接工具。" />
 <meta property="og:type" content="article" />
@@ -158,6 +162,8 @@
         <div class="logo">
             <a href="https://kiyanyang.github.io/" accesskey="h" title="Kiyan&#39;s Blog (Alt + H)">Kiyan&#39;s Blog</a>
             <div class="logo-switches">
+                <ul class="lang-switch"><li>|</li>
+                </ul>
             </div>
         </div>
         <ul id="menu">
@@ -621,7 +627,7 @@ selectMode('generate');
     </main>
     
 <footer class="footer">
-    <span>&copy; 2023 <a href="https://kiyanyang.github.io/">Kiyan&#39;s Blog</a></span>
+    <span>&copy; 2024 <a href="https://kiyanyang.github.io/">Kiyan&#39;s Blog</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
