--- a/extras/index.html
+++ b/extras/index.html
@@ -10,7 +10,7 @@
 <meta name="description" content="更多 - Kiyan&#39;s Blog">
 <meta name="author" content="Kiyan">
 <link rel="canonical" href="https://kiyanyang.github.io/extras/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.cab22e7bf36da7c15c63cdb748e2b5c4e9d64fc8c0d84ef2eb6d3ad0a557c01c.css" integrity="sha256-yrIue/Ntp8FcY823SOK1xOnWT8jA2E7y62060KVXwBw=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.d708a4fae7065b0040839ba21b3d95c293ed6b21034e5284060a3b6b051327a5.css" integrity="sha256-1wik&#43;ucGWwBAg5uiGz2VwpPtayEDTlKEBgo7awUTJ6U=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://kiyanyang.github.io/img/favicon.webp">
 <link rel="icon" type="image/png" sizes="16x16" href="https://kiyanyang.github.io/img/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://kiyanyang.github.io/img/favicon-32x32.png">
@@ -37,7 +37,7 @@
                 --secondary: rgb(155, 156, 157);
                 --tertiary: rgb(65, 66, 68);
                 --content: rgb(196, 196, 197);
-                --hljs-bg: rgb(46, 46, 51);
+                --code-block-bg: rgb(46, 46, 51);
                 --code-bg: rgb(55, 56, 62);
                 --border: rgb(51, 51, 51);
             }
@@ -58,7 +58,7 @@
     </style>
 </noscript>
 
-<link crossorigin="anonymous" href="/assets/scss/bundle.72020897a8abd268b64f5fbc63fccc8189a1623313d12ad386fb97a3fa60d70c.css" integrity="sha256-cgIIl6ir0mi2T1&#43;8Y/zMgYmhYjMT0SrThvuXo/pg1ww=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/scss/bundle.e50cc5059743ddaaaf920034cece28910d4687e9903248b269b4d12c5683574e.css" integrity="sha256-5QzFBZdD3aqvkgA0zs4okQ1Gh&#43;mQMkiyabTRLFaDV04=" rel="preload stylesheet" as="style">
 
 
 
@@ -84,11 +84,12 @@
 <meta property="og:title" content="更多" />
 <meta property="og:description" content="杨可的个人博客。" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://kiyanyang.github.io/extras/" /><meta property="og:image" content="https://kiyanyang.github.io/papermod-cover.png"/>
+<meta property="og:url" content="https://kiyanyang.github.io/extras/" />
+<meta property="og:image" content="https://kiyanyang.github.io/papermod-cover.png" />
 
-<meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://kiyanyang.github.io/papermod-cover.png"/>
 
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:image" content="https://kiyanyang.github.io/papermod-cover.png" />
 <meta name="twitter:title" content="更多"/>
 <meta name="twitter:description" content="杨可的个人博客。"/>
 
@@ -122,8 +123,6 @@
         <div class="logo">
             <a href="https://kiyanyang.github.io/" accesskey="h" title="Kiyan&#39;s Blog (Alt + H)">Kiyan&#39;s Blog</a>
             <div class="logo-switches">
-                <ul class="lang-switch"><li>|</li>
-                </ul>
             </div>
         </div>
         <ul id="menu">
@@ -252,7 +251,8 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2024 <a href="https://kiyanyang.github.io/">Kiyan&#39;s Blog</a></span>
+        <span>&copy; 2024 <a href="https://kiyanyang.github.io/">Kiyan&#39;s Blog</a></span> · 
+
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
